@@ -430,11 +430,11 @@ public class DemographicLink extends AbstractModel<Integer> implements Persisten
     }
     
     public void pcCopyKeyFieldsFromObjectId(final FieldConsumer fieldConsumer, final Object o) {
-        fieldConsumer.storeObjectField(5 + DemographicLink.pcInheritedFieldCount, (Object)new Integer(((IntId)o).getId()));
+        fieldConsumer.storeObjectField(5 + DemographicLink.pcInheritedFieldCount, (Object)Integer.valueOf(((IntId)o).getId()));
     }
     
     public void pcCopyKeyFieldsFromObjectId(final Object o) {
-        this.id = new Integer(((IntId)o).getId());
+        this.id = Integer.valueOf(((IntId)o).getId());
     }
     
     public Object pcNewObjectIdInstance(final Object o) {
